# azure-utils

./: .gitignore  cli.sh
.github/workflows/: python.yaml
VM/: README.md  agent.md  scale.md  virtual-public-ip.md
VM/hadr/: README.md  ha.md
cli/: README.md  cli.sh  context.sh  databricks.sh  davidkhala.sh  entra.sh  purview.sh  sshkey.sh  vault.sh
cli/entra/: service-principal.sh
cli/extension/: README.md  ext.ps1  vm.ps1
cli/extension/py/: pyproject.toml
cli/extension/py/azext_davidkhala/: __init__.py
container/: README.md
cosmos/: README.md  connect.md
cosmos/gremlin/: README.md
cosmos/nosql/: README.md
data/: README.md  studio
data/Explorer/: README.md
data/bricks/: README.md  UnityCatalog.md  ai.md  cluster.md  operation.md  uc.md  unity-catalog.md
data/bricks/cli/: bash.sh  enable.run
data/bricks/task/: notebook.md
data/databricks/: README.md  operation.md
data/factory/: README.md  trigger.md
data/share/: README.md
data/sql/db/: README.md  tables.md
data/sql/warehouse/: README.md  index.md  ingestion.md  pool.md  table.md
data/stream-analytics/: README.md
data/stream-analytics/query/: README.md  functions.md
data/studio/: README.md
factory/: azure-DI.json
fedora/: cli.sh
foundry/: README.md
foundry/FormRecognizer/: README.md
foundry/ops/: model.md
hadr/: ha.md
iac/: ARM.md
log/: README.md
network/: lb.md
network/vnet/: route.md
nodejs/: .eslintrc.json  .gitignore  .npmignore  format.js  login.js  package.json  subscription.js
nodejs/test/: auth.js
nodejs/test/azure-sample/: list.js  package.json
nodejs/vault/: README.md  index.js  package.json
nodejs/vault/test/: keyCycle.js  keyVault.js
py/: README.md  pyproject.toml
py/auth/: __init__.py
py/azext_davidkhala/: __init__.py  azext_metadata.json
py/davidkhala/azure/: __init__.py  auth.py  ci.py  log.py  monitor.py  subscription.py
py/davidkhala/azure/ai/: __init__.py  agent.py  form.py  project.py  tools.py
py/davidkhala/azure/az/: extension.py
py/davidkhala/azure/cli/: ext.py
py/davidkhala/azure/monitor/: __init__.py  dce.py  dcr.py  ingestion.py  log.py  monitor.py
py/davidkhala/azure/recipe/: blob.py
py/davidkhala/azure/storage/: blob.py  community.py
py/davidkhala/azure/storage/community/: blob.py
py/test/: auth_test.py
py/tests/: ai_test.py  auth_test.py  log_test.py  monitor_test.py  tenant_test.py
py/tests/ai/: ai_test.py  form_test.py
py/tests/storage/: community_test.py  official_test.py
storage/: README.md  abfss.md  adls.md  desktop.md  replica.md  sas.md  wasbs.md
vault/: README.md
