[tool.poetry]
name = "davidkhala.azure"
version = "0.0.4"
description = "@davidkhala/azure-utils"
authors = ["David Liu <david-khala@hotmail.com>"]
readme = "README.md"
packages = [{ include = "davidkhala" }]

[tool.poetry.dependencies]
python = "^3.10"
azure-identity = "*"
azure-monitor-ingestion = { version = "*", optional = true }
azure-mgmt-monitor = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "*"
[tool.poetry.extras]
log = ["azure-monitor-ingestion", "azure-mgmt-monitor"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"