[tool.poetry]
name = "davidkhala.azure"
version = "0.0.4"
description = "@davidkhala/azure-utils"
authors = ["David Liu <david-khala@hotmail.com>"]
readme = "README.md"
packages = [{ include = "davidkhala" }]

[tool.poetry.dependencies]
python = "^3.10, <3.14"
azure-identity = "*"
azure-monitor-ingestion = { version = "*", optional = true }
azure-mgmt-monitor = { version = "*", optional = true }
azure-mgmt-loganalytics = { version = "*", optional = true }
azure-mgmt-resource = { version = "*", optional = true }
davidkhala-utils = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.poetry.extras]
log = ["azure-monitor-ingestion", "azure-mgmt-monitor", "azure-mgmt-loganalytics"]
tenant = ["azure-mgmt-resource"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"