[project]
name = "davidkhala.azure"
version = "0.0.4"
description = "@davidkhala/azure-utils"
authors = [{ name = "David Liu", email = "david-khala@hotmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "azure-identity",
    "davidkhala-utils",
]

[project.optional-dependencies]
log = [
    "azure-monitor-ingestion",
    "azure-mgmt-monitor==7.0.0b2",
    "azure-mgmt-loganalytics==13.0.0b4",
]
extension = [
    "azure-cli==2.75"
]
tenant = ["azure-mgmt-resource"]

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]
packages = ["azext_myextension"] # TODO
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
